Fix CI to build hyperlight-nanvix with Rust nightly
hyperlight-nanvix uses unstable Rust features  requiring the nightly compiler. CI was failing because rust-toolchain.toml wasn't being picked up when running from the project root. Added Rust nightly setup to all CI jobs and updated install-nanvix to explicitly install nightly via rustup. Removed safety dependency which requires auth.

Signed-off-by: James Sturtevant <jsturtevant@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,9 @@ jobs:
       - name: Install just
         uses: extractions/setup-just@v3
 
+      - name: Set up Rust nightly
+        uses: dtolnay/rust-action@nightly
+
       - name: Setup environment
         run: just setup
 
@@ -66,6 +69,9 @@ jobs:
 
       - name: Install just
         uses: extractions/setup-just@v3
+
+      - name: Set up Rust nightly
+        uses: dtolnay/rust-action@nightly
 
       - name: Setup environment
         run: just setup
@@ -107,6 +113,9 @@ jobs:
       - name: Install just
         uses: extractions/setup-just@v3
 
+      - name: Set up Rust nightly
+        uses: dtolnay/rust-action@nightly
+
       - name: Build package
         run: just build
 
@@ -138,6 +147,9 @@ jobs:
 
       - name: Install just
         uses: extractions/setup-just@v3
+
+      - name: Set up Rust nightly
+        uses: dtolnay/rust-action@nightly
 
       - name: Setup environment
         run: just setup
