Add Docker containerization with Azure OpenAI API key support
Enable running the code interpreter in Docker containers for easier deployment and testing.

- Add Dockerfile with python:3.12-slim base, non-root user, and DevUI entrypoint
- Add --host flag to DevUI server so it can bind to 0.0.0.0 for container networking
- Support AZURE_OPENAI_API_KEY env var for simpler local auth (falls back to DefaultAzureCredential for Kubernetes workload identity)
- Enable local auth in Bicep template so API keys can be used during development
- Add docker-build, docker-run, docker-up commands to justfile

Signed-off-by: James Sturtevant <jsturtevant@gmail.com>

--- a/.env.example
+++ b/.env.example
@@ -14,4 +14,5 @@ OPENAI_RESPONSES_MODEL_ID="gpt-4o-mini"
 # =============================================================================
 AZURE_OPENAI_ENDPOINT=https://<your deployment>.openai.azure.com/
 AZURE_OPENAI_RESPONSES_DEPLOYMENT_NAME=gpt-4o
+AZURE_OPENAI_API_KEY=<for local docker dev>
 
