Add configurable hyperlight language support (Python/JavaScript)
Previously hyperlight mode only supported JavaScript. This enables selecting between Python and JavaScript for hyperlight VM sandbox execution, providing flexibility for different use cases while maintaining VM-level isolation.

Signed-off-by: James Sturtevant <jsturtevant@gmail.com>

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -38,6 +38,8 @@ spec:
         - name: app
           image: ${IMAGE_REGISTRY}/local-code-interpreter:${IMAGE_TAG}
           imagePullPolicy: Always
+          # Optional 
+          #args: --hyperlight [python|javascript]
           
           ports:
             - name: http
