Add debug logging for code execution with DEBUG env var
When debugging code execution issues in production, it was difficult to see what scripts were being run and their results. This adds formatted debug logging that clearly shows the input script and execution result, controlled via a DEBUG environment variable. Also adds k8s-logs-debug command and instructs the agent to always show code before running it.

Signed-off-by: James Sturtevant <jsturtevant@gmail.com>

--- a/k8s/configmap.yaml
+++ b/k8s/configmap.yaml
@@ -10,3 +10,5 @@ data:
   # Azure OpenAI Configuration (substituted via envsubst)
   AZURE_OPENAI_ENDPOINT: "${AZURE_OPENAI_ENDPOINT}"
   AZURE_OPENAI_RESPONSES_DEPLOYMENT_NAME: "${AZURE_OPENAI_RESPONSES_DEPLOYMENT_NAME}"
+  # Debug logging - set to "false" to disable debug logging for code execution
+  DEBUG: "true"
