Switch to ClusterIP service with port-forwarding for local access
LoadBalancer services expose the app publicly and incur extra costs for a static IP in cloud environments. Using ClusterIP with kubectl port-forward is more appropriate for development/testing scenarios and improves security by keeping the service internal by default.

Signed-off-by: James Sturtevant <jsturtevant@gmail.com>

--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -7,7 +7,7 @@ metadata:
     app.kubernetes.io/name: local-code-interpreter
     app.kubernetes.io/component: service
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   selector:
     app.kubernetes.io/name: local-code-interpreter
   ports:
