Add Azure AI Foundry Claude model support with unified config
Enable Claude Opus models hosted on Azure AI Foundry as an alternative backend. This extends the agent beyond OpenAI/Azure OpenAI to leverage Anthropic's frontier AI capabilities with Azure's enterprise security and compliance.

The previous Azure OpenAI configuration used separate env vars that wouldn't work for Claude's different API endpoint. By unifying to AZURE_FOUNDRY_RESOURCE and AZURE_FOUNDRY_MODEL_NAME, users can now switch between GPT and Claude models with a single config change, and Claude is auto-detected when the model name contains 'claude'.

Both API key and Entra ID authentication are supported to accommodate local development and production Kubernetes deployments.

Signed-off-by: James Sturtevant <jsturtevant@gmail.com>

--- a/k8s/configmap.yaml
+++ b/k8s/configmap.yaml
@@ -7,8 +7,8 @@ metadata:
     app.kubernetes.io/name: local-code-interpreter
     app.kubernetes.io/component: config
 data:
-  # Azure OpenAI Configuration (substituted via envsubst)
-  AZURE_OPENAI_ENDPOINT: "${AZURE_OPENAI_ENDPOINT}"
-  AZURE_OPENAI_RESPONSES_DEPLOYMENT_NAME: "${AZURE_OPENAI_RESPONSES_DEPLOYMENT_NAME}"
+  # Azure AI Foundry Configuration (substituted via envsubst)
+  AZURE_FOUNDRY_RESOURCE: "${AZURE_FOUNDRY_RESOURCE}"
+  AZURE_FOUNDRY_MODEL_NAME: "${AZURE_FOUNDRY_MODEL_NAME}"
   # Debug logging - set to "false" to disable debug logging for code execution
   DEBUG: "true"
