--- a/.env.example
+++ b/.env.example
@@ -4,15 +4,17 @@
 # =============================================================================
 # Option 1: OpenAI (api.openai.com)
 # =============================================================================
-OPENAI_API_KEY=""
-OPENAI_RESPONSES_MODEL_ID="gpt-4o-mini"
+#OPENAI_API_KEY=""
+#OPENAI_RESPONSES_MODEL_ID="gpt-4o-mini"
 
 # =============================================================================
-# Option 2: Azure AI Foundry (Azure OpenAI)
+# Option 2: Azure AI Foundry (OpenAI or Anthropic models)
 # =============================================================================
-# Use `az login` to authenticate with Azure CLI, OR provide AZURE_OPENAI_API_KEY
+# Use `az login` to authenticate with Microsoft Entra ID, OR provide API key
+# For GPT models: gpt-4o, gpt-4o-mini, etc.
+# For Claude models: claude-opus-4-5, claude-sonnet-4-5, claude-haiku-4-5, claude-opus-4-1
+# Claude is auto-detected when model name contains "claude"
 # =============================================================================
-AZURE_OPENAI_ENDPOINT=https://<your deployment>.openai.azure.com/
-AZURE_OPENAI_RESPONSES_DEPLOYMENT_NAME=gpt-4o
-#AZURE_OPENAI_API_KEY=<for local docker dev>
-
+AZURE_FOUNDRY_RESOURCE=<your-resource-name>
+AZURE_FOUNDRY_MODEL_NAME=claude-opus-4-5
+#AZURE_FOUNDRY_API_KEY=<for local docker dev>
