Update to use a newer model that is avaiable
Signed-off-by: James Sturtevant <jsturtevant@gmail.com>

--- a/.env.example
+++ b/.env.example
@@ -16,5 +16,5 @@
 # Claude is auto-detected when model name contains "claude"
 # =============================================================================
 AZURE_FOUNDRY_RESOURCE=<your-resource-name>
-AZURE_FOUNDRY_MODEL_NAME=claude-opus-4-5
+AZURE_FOUNDRY_MODEL_NAME=gpt-5.1-codex-mini
 #AZURE_FOUNDRY_API_KEY=<for local docker dev>
