Add Azure Functions Durable Agent deployment support
Enable deploying the code interpreter as a durable agent on Azure Functions for serverless hosting. The CLI-only approach required manual infrastructure and didn't support stateful conversations across requests. This adds function_app.py as the Azure Functions entrypoint, shared.py to extract common agent configuration (instructions, retry middleware) between CLI and Functions deployments, justfile commands for local development with emulators (func-start, func-test, func-health), and the necessary configuration files (host.json, local.settings.sample.json). Refactors agent.py to import shared components rather than duplicating them.

Signed-off-by: James Sturtevant <jsturtevant@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,8 @@ test-results.xml
 infra/*.json
 # Vendor directory (hyperlight-nanvix cloned here)
 vendor/
+
+# Azure Functions
+local.settings.json
+.python_packages/
+__azurite_*/
